@@ -393,16 +393,18 @@ class PlotCurveItem(GraphicsObject):
         if self.path is None:
             x,y = self.getData()
             if x is None or len(x) == 0 or y is None or len(y) == 0:
-                return QtGui.QPainterPath()
-            self.path = self.generatePath(*self.getData())
+                self.path = QtGui.QPainterPath()
+            else:
+                self.path = self.generatePath(*self.getData())
             self.fillPath = None
             self._mouseShape = None
+            
         return self.path
 
     @debug.warnOnException  ## raising an exception here causes crash
     def paint(self, p, opt, widget):
         profiler = debug.Profiler()
-        if self.xData is None:
+        if self.xData is None or len(self.xData) == 0:
             return
         
         if HAVE_OPENGL and getConfigOption('enableExperimental') and isinstance(widget, QtOpenGL.QGLWidget):
